@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-07T16:15:36Z",
+  "timestamp" : "2022-06-08T00:57:46Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 348,
+  "count" : 349,
   "uniques" : 188,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
